@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020241029"
-#define public MagickPackageReleaseDate "snapshot-20241029"
+#define public MagickPackageVersionAddendum ".020241030"
+#define public MagickPackageReleaseDate "snapshot-20241030"
