@@ -1,3 +1,8 @@
+2024-10-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* fuzzing/oss-fuzz-build.sh: Skip re-bootstrap of GraphicsMagick
+	since it sometimes fails due to network issues.
+
 2024-10-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/heif.c (ReadMetadata): Address oss-fuzz issue 376100386
